Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-20473
Spotlight locator filter does not support line numbers
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P3: Somewhat important
Fix Version/s:
Qt Creator 4.7.1
Affects Version/s:
Qt Creator 4.6.1
Component/s:
All Other Issues
Labels:
None
Commits:
e40b250d13b80fe2fed66b20266deafb14ac5df1
Description
foo.cpp:123
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Eike Ziller
Reporter:
Eike Ziller
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
23 May '18 08:37
Updated:
03 Sep '18 12:30
Resolved:
03 Sep '18 12:30
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Add line/column number handling to spotlight locator filter
Gerrit Review: