Add line/column number handling to spotlight locator filter

Otherwise it is not possible to directly open a file at a location with
the spotlight filter (in the style of "md qwidget.cpp:100").

Task-number: QTCREATORBUG-20473
Change-Id: I9ee70c411f77ca715ebba864ef16eab7c9b31bde
Reviewed-by: David Schulz <david.schulz@qt.io>